AJS-416 - adding some css to fix overflow in forms field-group
git-svn-id: https://studio.atlassian.com/svn/AJS/trunk@63261 2c54a935-e501-0410-bc05-97a93f6bca70

--- a/auiplugin/src/main/resources/css/atlassian/forms.css
+++ b/auiplugin/src/main/resources/css/atlassian/forms.css
@@ -133,7 +133,8 @@ form.aui .field-group {
     display: block;
     margin-bottom: 5px;
     min-height: 1.6em;
-    padding: 0 0 5px 140px;
+    padding: 3px 0 5px 140px;
+    overflow: hidden;
 }
 form.aui .field-group:last-child,
 form.aui fieldset fieldset:last-child {
